03-INGRESS/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: flask.words.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: flask-server-service
            port:
              number: 5000
---
